# administrador-tareas

./: Procfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
webdev/: home_view.py  settings.py  test_home.py  urls.py
webdev/tareas/: apps.py  forms.py  models.py  urls.py  views.py
webdev/tareas/migrations/: 0001_initial.py
webdev/tareas/templates/tareas/: footer.html  header.html  home.html
webdev/tareas/tests/: test_tareas_get.py  test_tareas_post.py
